--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,20 @@
 
 <html>
 <head>
+	<!-- Google Analytics -->
+
+
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-134913739-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
+<!-- End Google Analytics -->
 	<title>HCI Project Portfolio</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +26,10 @@
   	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/introHCI.js"></script>
+
+	
 </head>
+
 
 <body>
 	<div class="container">
@@ -29,12 +46,23 @@
 						<img src="images/{{image}}" alt="Lorem Pixel image" class="img-responsive">
 						<h4>{{title}}</h4>
 					</a>
-					<div class="likeCtr"><button class="btn btn-default likeBtn">Like</button></div>
+					<div class="likeCtr">
+
+						<button class="btn btn-default likeBtn" onclick="googleAnalytics()">Like</button>
+
+					</div>
 					<div class="details"></div>
 				</div>
 			</div>
 		{{/each}}
-
+		<script>
+			function googleAnalytics(){
+				gtag('event', 'click', {
+				      event_category: 'like'
+				});	
+			}
+		</script>
 
 </body>
+
 </html>
