got gtag to work bc its actually ga unlike what the write up says...again

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -57,9 +57,7 @@
 		{{/each}}
 		<script>
 			function googleAnalytics(){
-				gtag('event', 'click', {
-				      event_category: 'like'
-				});	
+				ga("send", "event", 'like', 'click');
 			}
 		</script>
 
